@@ -1,15 +1,15 @@
 Begin4
 Title: procps
-Version: 3.2.0
-Entered-date: 2004-1-29
+Version: 3.2.1
+Entered-date: 2004-3-26
 Description: Linux system utilities
 Keywords: procps /proc libproc sysctl pmap ps uptime tload
 	free w top vmstat watch skill snice kill pgrep pkill
 Author: Albert Cahalan, Michael K. Johnson, Jim Warner, etc.
 Maintained-by: various <procps-feedback@lists.sf.net>
 Primary-site: http://procps.sf.net/
-	242kB procps-3.2.0.tar.gz
+	242kB procps-3.2.1.tar.gz
 Alternate-site: http://www.debian.org/Packages/unstable/base/procps.html
-	242kB procps-3.2.0.tar.gz
+	242kB procps-3.2.1.tar.gz
 Copying-policy: mixed
 End
